--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
     <title>Jessie Mbekou</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <h1>Mbekou Jessie</h1>
-        </nav>
+    <header class="">
+        <div class="container center">
+            <h1>Jessie Lorraine Mbekou</h1>
+        </div>
     </header>
     <main class="container">
-        <article>
-            <h2 class="center">About Me</h2>
-            <p>Hi there! I'm <strong>Jessie</strong>. I am a 23 year old Cameroonian girl, passionate of tech and design.
-                I hold a Bachelor's degree in software engineering </p>
-        </article>
+        <div class="row">
+            <article class="column">
+                <h2 class="center">About Me</h2>
+                <p>Hi there! I'm <strong>Jessie</strong>. I am a 23 year old Cameroonian girl, passionate of tech and design.   
+                    I hold a Bachelor's degree in software engineering and would like to pursue a career as a UI/UX designer.
+                    Curiosity is probably one of my main characteristics, as I always strive to acquire more knowledge and experience
+                    in life and I always want to understand how things work </p>
+                <p></p>
+                <blockquote>
+                    I love <em>music</em> and music loves me. - <cite>Jessie L</cite>
+                </blockquote>
+            </article>
+            <div class="column">
+                <img>
+            </div>
+        </div>
     </main>
+    <footer class="center">
+         &copy; 2022 | Jessie's Website
+    </footer>
 </body>
 </html>
