Web page completed

--- a/index.html
+++ b/index.html
@@ -14,21 +14,44 @@
         </div>
     </header>
     <main class="container">
-        <div class="row">
-            <article class="column">
-                <h2 class="center">About Me</h2>
-                <p>Hi there! I'm <strong>Jessie</strong>. I am a 23 year old Cameroonian girl, passionate of tech and design.   
-                    I hold a Bachelor's degree in software engineering and would like to pursue a career as a UI/UX designer.
-                    Curiosity is probably one of my main characteristics, as I always strive to acquire more knowledge and experience
-                    in life and I always want to understand how things work </p>
-                <p></p>
-                <blockquote>
-                    I love <em>music</em> and music loves me. - <cite>Jessie L</cite>
-                </blockquote>
+        <div class="">
+            <article>
+                <div class="column-1">
+                    <h2 class="color-y">About Me</h2>
+                    <p>Hi there! I'm <strong>Jessie</strong>. I am a 23 year old Cameroonian girl, passionate of tech and design.   
+                        I hold a Bachelor's degree in software engineering and would like to pursue a career as a UI/UX designer.
+                        Curiosity is probably one of my main characteristics, as I always strive to acquire more knowledge and experience
+                        in life. I always want to understand how things work and want to come about different solutions in achieving my goals </p>
+                    <p>
+                        I am hardworking when it comes to things I am passionate about. I am a perfectionist and I always want things to be on point.
+                        It is not always the case all the time, but I try harder to do better at every trial. 
+                    </p>
+
+                    <blockquote>
+                        I love <em>music</em> and music loves me. - <cite>Jessie L</cite>
+                    </blockquote>
+
+                    <hr>
+
+                    <p>
+                        Most of the time I spend my time doing things that I love, which are not necessarily school-related. Some of these things are:
+                    </p>
+                    <ul>
+                        <li><strong>Music: </strong>I sing and listen to music all the time. It relaxes me and helps me feel better whenever I am down.</li>
+                        <li><strong>Dance: </strong>I love dancing and used to have a dance crew back in my country. Dancing helps me evacuate stress.</li>
+                        <li><strong>Animes: </strong>Animes are my world. I've been waching animes ever since I was a child and have never stopped until now.</li>
+                        <li><strong>Football: </strong>I am a soccer fan and my favorite player is Lionel Messi. I love watching football whenever I'm chanced to.</li>
+                        <li><strong>Sleeping: </strong>Last but not the least, I love sleeping most of the time. I'm in love with my bed and do literaly everything in bed.</li>
+                    </ul>
+
+                </div>
+                <div class="column-2 img">
+                    <div class="img-wrapper">
+                        <img src="img/jess.jpg" class="image">
+                    </div>
+                </div>
             </article>
-            <div class="column">
-                <img>
-            </div>
+            
         </div>
     </main>
     <footer class="center">
