Fixes Responsiveness, adds sup and abbr

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             <article>
                 <div class="column-1">
                     <h2 class="color-y">About Me</h2>
-                    <p>Hi there! I'm <strong>Jessie</strong>. I am a 23 year old Cameroonian girl, passionate of tech and design.   
-                        I hold a Bachelor's degree in software engineering and would like to pursue a career as a UI/UX designer.
+                    <p>Hi there! I'm <strong>Jessie</strong>, a young girl passionate of tech and design. I was born on the 5<sup>th</sup>
+                        of September 1999 in Cameroon, my country of origin. I hold a Bachelor's degree in software engineering and would like to pursue a career as a 
+                        <abbr title="User Interface/User Experience">UI/UX</abbr> designer.
                         Curiosity is probably one of my main characteristics, as I always strive to acquire more knowledge and experience
                         in life. I always want to understand how things work and want to come about different solutions in achieving my goals </p>
                     <p>
                         I am hardworking when it comes to things I am passionate about. I am a perfectionist and I always want things to be on point.
-                        It is not always the case all the time, but I try harder to do better at every trial. 
+                        It is not always the case all the time, but I try hard to do better at every trial. 
                     </p>
 
                     <blockquote>
