Fixes image accessibility error

--- a/index.html
+++ b/index.html
@@ -14,46 +14,38 @@
         </div>
     </header>
     <main class="container">
-        <div class="">
-            <article>
-                <div class="column-1">
-                    <h2 class="color-y">About Me</h2>
-                    <p>Hi there! I'm <strong>Jessie</strong>, a young girl passionate of tech and design. I was born on the 5<sup>th</sup>
-                        of September 1999 in Cameroon, my country of origin. I hold a Bachelor's degree in software engineering and would like to pursue a career as a 
-                        <abbr title="User Interface/User Experience">UI/UX</abbr> designer.
-                        Curiosity is probably one of my main characteristics, as I always strive to acquire more knowledge and experience
-                        in life. I always want to understand how things work and want to come about different solutions in achieving my goals </p>
-                    <p>
-                        I am hardworking when it comes to things I am passionate about. I am a perfectionist and I always want things to be on point.
-                        It is not always the case all the time, but I try hard to do better at every trial. 
-                    </p>
+        <article>
+            <div class="column-1">
+                <h2 class="color-y">About Me</h2>
+                <p>Hi there! I'm <strong>Jessie</strong>, a young girl passionate of tech and design. I was born on the 5<sup>th</sup>
+                    of September 1999 in Cameroon, my country of origin. I hold a Bachelor's degree in software engineering and would like to pursue a career as a 
+                    <abbr title="User Interface/User Experience">UI/UX</abbr> designer.
+                    Curiosity is probably one of my main characteristics, as I always strive to acquire more knowledge and experience
+                    in life. I always want to understand how things work and want to come about different solutions in achieving my goals </p>
+                <p>I am hardworking when it comes to things I am passionate about. I am a perfectionist and I always want things to be on point.
+                    It is not always the case all the time, but I try hard to do better at every trial.</p>
 
-                    <blockquote>
-                        I love <em>music</em> and music loves me. - <cite>Jessie L</cite>
-                    </blockquote>
+                <blockquote>
+                    I love <em>music</em> and music loves me. - <cite>Jessie L</cite>
+                </blockquote>
+                <hr>
+                <p>Most of the time I spend my time doing things that I love, which are not necessarily school-related. Some of these things are:</p>
+                <ul>
+                    <li><strong>Music: </strong>I sing and listen to music all the time. It relaxes me and helps me feel better whenever I am down.</li>
+                    <li><strong>Dance: </strong>I love dancing and used to have a dance crew back in my country. Dancing helps me evacuate stress.</li>
+                    <li><strong>Animes: </strong>Animes are my world. I've been waching animes ever since I was a child and have never stopped until now.</li>
+                    <li><strong>Football: </strong>I am a soccer fan and my favorite player is Lionel Messi. I love watching football whenever I'm chanced to.</li>
+                    <li><strong>Sleeping: </strong>Last but not the least, I love sleeping most of the time. I'm in love with my bed and do literaly everything in bed.</li>
+                </ul>
 
-                    <hr>
-
-                    <p>
-                        Most of the time I spend my time doing things that I love, which are not necessarily school-related. Some of these things are:
-                    </p>
-                    <ul>
-                        <li><strong>Music: </strong>I sing and listen to music all the time. It relaxes me and helps me feel better whenever I am down.</li>
-                        <li><strong>Dance: </strong>I love dancing and used to have a dance crew back in my country. Dancing helps me evacuate stress.</li>
-                        <li><strong>Animes: </strong>Animes are my world. I've been waching animes ever since I was a child and have never stopped until now.</li>
-                        <li><strong>Football: </strong>I am a soccer fan and my favorite player is Lionel Messi. I love watching football whenever I'm chanced to.</li>
-                        <li><strong>Sleeping: </strong>Last but not the least, I love sleeping most of the time. I'm in love with my bed and do literaly everything in bed.</li>
-                    </ul>
-
+            </div>
+            <div class="column-2 img">
+                <div class="img-wrapper">
+                    <img src="img/jess.jpg" alt="Jessie's picture" class="image">
                 </div>
-                <div class="column-2 img">
-                    <div class="img-wrapper">
-                        <img src="img/jess.jpg" class="image">
-                    </div>
-                </div>
-            </article>
+            </div>
+        </article>
             
-        </div>
     </main>
     <footer class="center">
          &copy; 2022 | Jessie's Website
