--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <header class="">
-        <div class="container center">
-            <h1>Jessie Lorraine Mbekou</h1>
+        <div class="container container-sm d-flex-h">
+            <h1 class="mr-3">Jessie Lorraine Mbekou</h1>
+            <nav>
+                <a class="active" href="#">Home</a> 
+                <span>|</span>
+                <a href="notes.html">Notes</a>
+            </nav>
         </div>
     </header>
-    <main class="container">
+    <main class="container container-sm">
         <article>
             <div class="column-1">
                 <h2 class="color-y">About Me</h2>
