--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </blockquote>
                 <hr>
                 <p>Most of the time I spend my time doing things that I love, which are not necessarily school-related. Some of these things are:</p>
-                <ul>
+                <ul class="h-list">
                     <li><strong>Music: </strong>I sing and listen to music all the time. It relaxes me and helps me feel better whenever I am down.</li>
                     <li><strong>Dance: </strong>I love dancing and used to have a dance crew back in my country. Dancing helps me evacuate stress.</li>
                     <li><strong>Animes: </strong>Animes are my world. I've been waching animes ever since I was a child and have never stopped until now.</li>
@@ -50,7 +50,57 @@
                 </div>
             </div>
         </article>
-            
+        <div class="table-responsive">
+            <table>
+                <caption>Languages Proficiency</caption>
+                <thead>
+                    <tr>
+                        <th>Language</th>
+                        <th>Reading</th>
+                        <th>Writing</th>
+                        <th>Speaking</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>French</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                    </tr>
+                    <tr>
+                        <td>English</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                    </tr>
+                    <tr>
+                        <td>Spanish</td>
+                        <td>Beginner</td>
+                        <td>Beginner</td>
+                        <td>Beginner</td>
+                    </tr>
+                    <tr>
+                        <td>French</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                    </tr>
+                    <tr>
+                        <td>English</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                        <td>Fluent</td>
+                    </tr>
+                    <tr>
+                        <td>Spanish</td>
+                        <td>Beginner</td>
+                        <td>Beginner</td>
+                        <td>Beginner</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
     <footer class="center">
          &copy; 2022 | Jessie's Website
